<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/turn_on_location"
            android:textColor="@color/sentence_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/sub_sentence_color"
            android:text="@string/we_use_location_to_notify_you_if_we_are_available_in_your_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/light_blue_stroke"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/nothanks"
            android:textColor="@color/blue_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yesTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTV" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/yesTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/light_blue_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/turnon"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noTV"
            app:layout_constraintTop_toBottomOf="@+id/messageTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>