<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handleClick"
            type="com.handlUser.app.utils.ClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timeDateCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/set_month_amp_date"
                android:fontFamily="@font/lato_semibold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/sentence_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/white_button"
                android:elevation="@dimen/_3sdp"
                android:gravity="center"
                android:hint="@string/select_date"
                android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/sub_sentence_color"
                android:textColor="@color/sub_sentence_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTV"
                tools:targetApi="lollipop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/set_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/sentence_color"
                android:fontFamily="@font/lato_semibold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectDateTV" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectTimeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/white_button"
                android:elevation="@dimen/_3sdp"
                android:gravity="center"
                android:textColor="@color/sub_sentence_color"
                android:hint="@string/select_time"
                android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/sub_sentence_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeTV"
                tools:targetApi="lollipop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nextTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/light_blue_button"
                android:gravity="center"
                android:fontFamily="@font/lato_regular"
                android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                android:padding="@dimen/_10sdp"
                android:text="@string/next"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>